// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Navigation BackArrowButton 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    disabled={false}
    style={
      Object {
        "backgroundColor": "#1d1d20",
        "border": "none",
        "borderRadius": "48px",
        "color": "#FFF",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "height": "60px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "width": "60px",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#FFF",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Shared Components|Navigation BackButton 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    disabled={false}
    style={
      Object {
        "backgroundColor": "#1d1d20",
        "border": "none",
        "borderRadius": "48px",
        "color": "#FFF",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "margin": "0",
        "marginRight": 5,
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "width": "calc(50% - 5px)",
      }
    }
  >
    <span>
      Back
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared Components|Navigation NavigationContainer 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-kkGfuU cbFdcv"
  >
    <div
      className="sc-iAyFgw dIxqGD"
    >
      <button
        disabled={false}
        style={
          Object {
            "backgroundColor": "#1d1d20",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "height": "60px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "width": "60px",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Navigation NextButton 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    disabled={false}
    style={
      Object {
        "backgroundColor": "#FFF",
        "border": "none",
        "borderRadius": "48px",
        "color": "#000",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "margin": "0",
        "marginLeft": 5,
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "width": "calc(50% - 5px)",
      }
    }
  >
    <span>
      Next
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared Components|Navigation PlusButton 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    disabled={false}
    style={
      Object {
        "backgroundColor": "#1d1d20",
        "border": "none",
        "borderRadius": "48px",
        "color": "#FFF",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "height": "60px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "width": "60px",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#FFF",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;
